<?xml version="1.0"?>
<package>
  <name>rosbag_parse</name>
  <version>0.1.0</version>
  <description>The rosbag_parse package</description>

  <maintainer email="sirius@sirius.com">sirius</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
<build_depend>roscpp</build_depend>
<build_depend>rospy</build_depend>
<build_depend>std_msgs</build_depend>
<build_depend>tf</build_depend>
<build_depend>sirius_msgs</build_depend>
<build_depend>rfans_msgs</build_depend>
<build_depend>sensor_msgs</build_depend>

<run_depend>roscpp</run_depend>
<run_depend>rospy</run_depend>
<run_depend>std_msgs</run_depend>
<run_depend>tf</run_depend>
<run_depend>sirius_msgs</run_depend>
<run_depend>rfans_msgs</run_depend>
<run_depend>sensor_msgs</run_depend>

</package>
